# Web_Name-Scanner

./: README.md  config.yaml  pyproject.toml  requirements.txt
siteguard/: __init__.py  __main__.py  cli.py  collector.py  config.py  discoverer.py  generator.py  models.py  net.py  reporter.py  scorer.py
tests/: test_scorer.py
