[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siteguard"
version = "0.1.0"
description = "CLI tool for detecting fraudulent and lookalike websites."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "dnspython>=2.6.0",
  "dnstwist>=20240116",
  "python-dotenv>=1.0.0",
  "python-whois>=0.9.0",
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
  "rich>=13.7.0",
]

[project.scripts]
siteguard = "siteguard.cli:main"

[tool.setuptools.packages.find]
include = ["siteguard*"]
